Transormation working