@@ -1,5 +1,6 @@
 package com.example;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -7,7 +8,7 @@ import static io.github.evacchi.query.Query.*;
 
 public class A {
     public Collection<String> a() {
-        return from(List.of("foo", "bar", "baz", "quux"))
+        return from(Arrays.asList("foo", "bar", "baz", "quux"))
                 .filter(s -> s.length() > 3);
     }
 } 
